--- a/force-app/main/default/classes/StringUtils.cls
+++ b/force-app/main/default/classes/StringUtils.cls
@@ -102,7 +102,7 @@
  * @since 1.0
  */
 //@Immutable
-public class StringUtils {
+global class StringUtils {
 
     private static final Integer STRING_BUILDER_SIZE = 256;
 
@@ -1527,47 +1527,47 @@ public class StringUtils {
 //        return isEmpty(str) ? defaultStr : str;
 //    }
 //
-//    /**
-//     * <p>Returns either the passed in String,
-//     * or if the String is {@code null}, an empty String ('').</p>
-//     *
-//     * <pre>
-//     * StringUtils.defaultString(null)  = ''
-//     * StringUtils.defaultString('')    = ''
-//     * StringUtils.defaultString('bat') = 'bat'
-//     * </pre>
-//     *
-//     * @see ObjectUtils#toString(Object)
-//     * @see String#valueOf(Object)
-//     * @param str  the String to check, may be null
-//     * @return the passed in String, or the empty String if it
-//     *  was {@code null}
-//     */
-//    public static String defaultString(final String str) {
-//        return defaultString(str, EMPTY);
-//    }
-//
-//    /**
-//     * <p>Returns either the passed in String, or if the String is
-//     * {@code null}, the value of {@code defaultStr}.</p>
-//     *
-//     * <pre>
-//     * StringUtils.defaultString(null, 'NULL')  = 'NULL'
-//     * StringUtils.defaultString('', 'NULL')    = ''
-//     * StringUtils.defaultString('bat', 'NULL') = 'bat'
-//     * </pre>
-//     *
-//     * @see ObjectUtils#toString(Object,String)
-//     * @see String#valueOf(Object)
-//     * @param str  the String to check, may be null
-//     * @param defaultStr  the default String to return
-//     *  if the input is {@code null}, may be null
-//     * @return the passed in String, or the default if it was {@code null}
-//     */
-//    public static String defaultString(final String str, final String defaultStr) {
-//        return str == null ? defaultStr : str;
-//    }
-//
+    /**
+     * <p>Returns either the passed in String,
+     * or if the String is {@code null}, an empty String ('').</p>
+     *
+     * <pre>
+     * StringUtils.defaultString(null)  = ''
+     * StringUtils.defaultString('')    = ''
+     * StringUtils.defaultString('bat') = 'bat'
+     * </pre>
+     *
+     * @see ObjectUtils#toString(Object)
+     * @see String#valueOf(Object)
+     * @param str  the String to check, may be null
+     * @return the passed in String, or the empty String if it
+     *  was {@code null}
+     */
+    global static String defaultString(final String str) {
+        return defaultString(str, EMPTY);
+    }
+
+    /**
+     * <p>Returns either the passed in String, or if the String is
+     * {@code null}, the value of {@code defaultStr}.</p>
+     *
+     * <pre>
+     * StringUtils.defaultString(null, 'NULL')  = 'NULL'
+     * StringUtils.defaultString('', 'NULL')    = ''
+     * StringUtils.defaultString('bat', 'NULL') = 'bat'
+     * </pre>
+     *
+     * @see ObjectUtils#toString(Object,String)
+     * @see String#valueOf(Object)
+     * @param str  the String to check, may be null
+     * @param defaultStr  the default String to return
+     *  if the input is {@code null}, may be null
+     * @return the passed in String, or the default if it was {@code null}
+     */
+    global static String defaultString(final String str, final String defaultStr) {
+        return str == null ? defaultStr : str;
+    }
+
 //    /**
 //     * <p>Deletes all whitespaces from a String as defined by
 //     * {@link Character#isWhitespace(char)}.</p>
